--- a/POA.SchoolManagerApplication/POA.SchoolManagerApplication.csproj
+++ b/POA.SchoolManagerApplication/POA.SchoolManagerApplication.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.1.0" />
+    <PackageReference Include="Flunt" Version="2.0.5" />
   </ItemGroup>
 
 </Project>
