--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 */src/.vs/*
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+*.TestStore
+*.cache
 
 # Mono auto generated files
 mono_crash.*
